Add multi-soma autotracing pipeline
Implement traceMultiSoma() with:
- per-cell exclusion masks
- caliper-based spread limits
-  hierarchical pruning
- seed-based soma detection (detectSomasAt) from ROIs/coordinates
- inter-soma distance estimation via hierarchical clustering